<resources>
    <string name="add_list_hint">Name of the list</string>
    <string name="deleteList">Are you sure to delete this list?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="unit">unit</string>
    <string name="addItem">Add item</string>
    <string name="amount">amount</string>
    <string name="accept">accept</string>
    <string name="selectItem">select item</string>
    <string name="product">product</string>
    <string name="name">name</string>
    <string name="photo">photo</string>
    <string name="add_url_hint">Add url to photo</string>
    <string name="product_validation">Some of the fields are empty, or name is used</string>
    <string name="product_saved">Product saved successfully</string>
    <string name="amountValidation">You added wrong amount</string>
    <string name="items">items</string>
    <string name="new_list">new</string>
    <string name="partly">partly realised</string>
    <string name="realised">realised</string>
    <string name="status">status</string>
    <string name="deleteItem">Do you want to delete the item?</string>

    <string-array name="units">
        <item name="kilos">kg</item>
        <item name="mililiters">ml</item>
        <item name="pieces">pc</item>
    </string-array>
</resources>
