<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/chooseItemColor"
    android:orientation="vertical"
    >
    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_gravity="right"
        android:id="@+id/collapse"
        android:src="@android:drawable/ic_menu_close_clear_cancel"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="50dp"
        style="@style/dropDown"
        android:spinnerMode="dropdown"
        android:id="@+id/products"
        android:layout_marginTop="20dp">
    </Spinner>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/chooseItemColor"
        android:id="@+id/unitView"
        android:visibility="gone">
    <TextView
        android:layout_width="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_height="wrap_content"
        android:text="@string/unit"
        android:background="@color/chooseItemColor"
        style="@style/popUpWindow"
        android:textAllCaps="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unit"
        android:id="@+id/unit"
        android:background="@color/chooseItemColor"
        style="@style/popUpWindow"
        android:layout_alignParentRight="true"
        android:textAllCaps="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/amountView"
        android:background="@color/chooseItemColor"
        android:visibility="gone">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:background="@color/chooseItemColor"
            style="@style/popUpWindow"
            android:textAllCaps="true"/>
      <EditText
          android:layout_width="100dp"
          android:layout_height="50dp"
          android:layout_alignParentRight="true"
          android:id="@+id/amount"
          style="@style/editText"
          android:background="@null"
          android:cursorVisible="true"
          android:textSize="30sp"/>
    </RelativeLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        android:text="@string/accept"
        android:id="@+id/accept"
        style="@style/popUpWindow"/>

</LinearLayout>